atualização do link do linkedin

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<a target="blank" href="https://github.com/ariane011">
 				<i class="fab fa-github-alt"></i>
 			</a>
-			<a target="blank" href="https://linkedin.com/in/ariane-g-sousa/">
+			<a target="blank" href="https://linkedin.com/in/arianegsousa/">
 				<i class="fab fa-linkedin"></i>
 			</a>
 			<a target="blank" href="https://instagram.com/ariane.gsousa">
