layout da seção sobre

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 			</div>
 		</div>
 	</header>
-	<section class="sobre container" id="sobre">
+	<section class="sobre" id="sobre">
 		<div class="sobre">
 			<div>
 
 				<figure class="avatar-dev">
-					<img src="./img/dev_focus.svg" alt="Ilustração mulher usando computador">
+					<img src="./img/perfil.jpg" alt="Ilustração mulher usando computador">
 				</figure>
 			</div>
 			<div class="sobre-text">
