resolve bug in about

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 		</div>
 	</header>
 	<section class="sobre" id="sobre">
-		<div class="sobre">
+		<div class="sobre grid">
 			<div>
-
 				<figure class="avatar-dev">
 					<img src="./img/perfil.jpg" alt="Ilustração mulher usando computador">
 				</figure>
@@ -78,20 +77,22 @@
 		<hr />
 		<div class="grid">
 			<figure>
+				<a href="https://the-movie-tv.netlify.app/" target="blank"><img class="img-projetos"
+						src="./img/the-movie-tv.jpg" alt="The Movie TV"></a>
+
+			</figure>
+			<figure>
 				<a href="https://cv-speed-hiring.netlify.app/" target="blank"><img class="img-projetos"
 						src="./img/ch.png" alt="Collective Hiring"></a>
 
 			</figure>
+
 			<figure>
 				<a href="https://lovepets.netlify.app/" target="blank"><img class="img-projetos"
 						src="./img/lovepets.png" alt="Love Pets"></a>
 
 			</figure>
-			<figure>
-				<a href="http://www.rjcg-tubulacoes.com.br/" target="blank"><img class="img-projetos"
-						src="./img/rjcg.png" alt="RJCG - Tubulações"></a>
 
-			</figure>
 		</div>
 	</section>
 	<section class="contato" id="contato">
