--- a/index.html
+++ b/index.html
@@ -96,25 +96,26 @@
 		</div>
 	</section>
 	<section class="contato" id="contato">
-		<div>
-			<h2>Contato</h2>
-			<hr />
-			<div class="grid icons">
-				<a target="blank" href="https://github.com/ariane011">
-					<i class="fab fa-github-alt"></i>
-				</a>
-				<a target="blank" href="https://linkedin.com/in/arianegsousa/">
-					<i class="fab fa-linkedin"></i>
-				</a>
-				<a target="blank" href="https://instagram.com/ariane.gsousa">
-					<i class="fab fa-instagram"></i>
-				</a>
-				<a href="mailto:ariane.sousa011@gmail.com">
-					<i class="fas fa-envelope"></i>
-				</a>
+		<h2>Contato</h2>
+		<hr />
+		<div class="grid icons">
+			<a target="blank" href="https://github.com/ariane011">
+				<i class="fab fa-github-alt"></i>
+			</a>
+			<a target="blank" href="https://linkedin.com/in/arianegsousa/">
+				<i class="fab fa-linkedin"></i>
+			</a>
+			<a target="blank" href="https://instagram.com/ariane.gsousa">
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="mailto:ariane.sousa011@gmail.com">
+				<i class="fas fa-envelope"></i>
+			</a>
+			<div class="text-contato">
+				<p>© Copyright Ariane Gomes</p>
 			</div>
-			<p>© Copyright Ariane Gomes</p>
 		</div>
+
 	</section>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
