Remove link experiencia

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<ul class="navbar-nav">
 					<li><a class="menu-link" href="#sobre">Sobre</a></li>
-					<li><a class="menu-link" href="#experiencia">Experiência</a></li>
+					<!-- <li><a class="menu-link" href="#experiencia">Experiência</a></li> -->
 					<li><a class="menu-link" href="#projetos">Projetos</a></li>
 					<li><a class="menu-link" href="#contato">Contato</a></li>
 				</ul>
