Add linha do tempo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Ariane Gomes</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Special+Elite&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap" rel="stylesheet">
@@ -23,8 +24,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<ul class="navbar-nav">
-					<li><a class="menu-link" href="#sobre">Sobre</a></li>
-					<!-- <li><a class="menu-link" href="#experiencia">Experiência</a></li> -->
+					<li><a class="menu-link active" href="#sobre">Sobre</a></li>
+					<li><a class="menu-link" href="#experiencia">Experiência</a></li>
 					<li><a class="menu-link" href="#projetos">Projetos</a></li>
 					<li><a class="menu-link" href="#contato">Contato</a></li>
 				</ul>
@@ -44,14 +45,14 @@
 			</div>
 		</div>
 	</header>
-	<section class="sobre" id="sobre">
-		<div class="sobre grid">
+	<section class="sobre " id="sobre">
+		<div class="sobre grid reveal fade-bottom">
 			<div>
 				<figure class="avatar-dev">
 					<img src="./img/perfil.jpg" alt="Ilustração mulher usando computador">
 				</figure>
 			</div>
-			<div class="sobre-text">
+			<div class="sobre-text reveal fade-bottom">
 				<h2>Sobre mim</h2>
 				<hr />
 				<p>
@@ -72,6 +73,107 @@
 
 		</div>
 	</section>
+	<section id="experiencia" class="cd-container">
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+			</div>
+
+			<div class="cd-timeline-content">
+				<h2>Freelancer</h2>
+				<div class="timeline-content-info">
+					<span class="timeline-content-info-title">
+						<i class="fa-solid fa-briefcase"></i> Dev Front-End
+					</span>
+					<span class="timeline-content-info-date">
+						<i class="fa fa-calendar-o"></i>
+						Julho 2022 - Presente
+					</span>
+				</div>
+				<p>Desenvolvimento de sites corporativos.</p>
+				<ul class="content-skills">
+					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
+					<li><img class="icons-timeline" src="/img/css.png" /></li>
+					<li><img class="icons-timeline" src="/img/js.png" /></li>
+					<li><img class="icons-timeline" src="/img/react.png" /></li>
+				</ul>
+			</div>
+		</div>
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-movie">
+			</div>
+			<div class="cd-timeline-content">
+				<h2>Freelancer</h2>
+				<div class="timeline-content-info">
+					<span class="timeline-content-info-title">
+						<i class="fa-solid fa-briefcase"></i> Dev Front-End
+					</span>
+					<span class="timeline-content-info-date">
+						<i class="fa fa-calendar-o"></i>
+						Julho 2022 - Presente
+					</span>
+				</div>
+				<p>Desenvolvimento de sites corporativos.</p>
+				<ul class="content-skills">
+					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
+					<li><img class="icons-timeline" src="/img/css.png" /></li>
+					<li><img class="icons-timeline" src="/img/js.png" /></li>
+					<li><img class="icons-timeline" src="/img/react.png" /></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+			</div>
+
+			<div class="cd-timeline-content">
+				<h2>Freelancer</h2>
+				<div class="timeline-content-info">
+					<span class="timeline-content-info-title">
+						<i class="fa-solid fa-briefcase"></i> Dev Front-End
+					</span>
+					<span class="timeline-content-info-date">
+						<i class="fa fa-calendar-o"></i>
+						Julho 2022 - Presente
+					</span>
+				</div>
+				<p>Desenvolvimento de sites corporativos.</p>
+				<ul class="content-skills">
+					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
+					<li><img class="icons-timeline" src="/img/css.png" /></li>
+					<li><img class="icons-timeline" src="/img/js.png" /></li>
+					<li><img class="icons-timeline" src="/img/react.png" /></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-location">
+			</div>
+
+			<div class="cd-timeline-content">
+				<h2>Freelancer</h2>
+				<div class="timeline-content-info">
+					<span class="timeline-content-info-title">
+						<i class="fa-solid fa-briefcase"></i> Dev Front-End
+					</span>
+					<span class="timeline-content-info-date">
+						<i class="fa fa-calendar-o"></i>
+						Julho 2022 - Presente
+					</span>
+				</div>
+				<p>Desenvolvimento de sites corporativos.</p>
+				<ul class="content-skills">
+					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
+					<li><img class="icons-timeline" src="/img/css.png" /></li>
+					<li><img class="icons-timeline" src="/img/js.png" /></li>
+					<li><img class="icons-timeline" src="/img/react.png" /></li>
+				</ul>
+			</div>
+		</div>
+
+
+	</section> <!-- cd-timeline -->
 	<section class="projetos" id="projetos">
 		<h2>Projetos</h2>
 		<hr />
