Finalizando seção de experiencia

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 		<div class="titulo">
 			<div>
 				<h1 class="title">
-					{ }
+					< />
 				</h1>
 			</div>
 			<div>
-				<h2>Ariane Gomes de Sousa</h2>
+				<h2 class="title-h2">Ariane Gomes de Sousa</h2>
 			</div>
 			<div>
-				<p>Dev Front-End</p>
+				<p class="title-p">Dev Front-End</p>
 			</div>
 		</div>
 	</header>
@@ -74,7 +74,11 @@
 		</div>
 	</section>
 	<section id="experiencia" class="cd-container">
-		<div class="cd-timeline-block">
+		<div class="reveal fade-bottom">
+			<h2 class="cd-timeline-h2">Experiência</h2>
+			<hr />
+		</div>
+		<div class="cd-timeline-block reveal fade-bottom">
 			<div class="cd-timeline-img cd-picture">
 			</div>
 
@@ -89,60 +93,73 @@
 						Julho 2022 - Presente
 					</span>
 				</div>
-				<p>Desenvolvimento de sites corporativos.</p>
+				<p>Desenvolvimento de sites corporativos - Landing Pages</p>
 				<ul class="content-skills">
 					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
 					<li><img class="icons-timeline" src="/img/css.png" /></li>
 					<li><img class="icons-timeline" src="/img/js.png" /></li>
 					<li><img class="icons-timeline" src="/img/react.png" /></li>
+					<li><img class="icons-timeline" src="/img/git.png" /></li>
 				</ul>
 			</div>
 		</div>
-		<div class="cd-timeline-block">
+		<div class="cd-timeline-block reveal fade-bottom">
 			<div class="cd-timeline-img cd-movie">
 			</div>
 			<div class="cd-timeline-content">
-				<h2>Freelancer</h2>
+				<h2>TruckPad</h2>
 				<div class="timeline-content-info">
 					<span class="timeline-content-info-title">
 						<i class="fa-solid fa-briefcase"></i> Dev Front-End
 					</span>
 					<span class="timeline-content-info-date">
 						<i class="fa fa-calendar-o"></i>
-						Julho 2022 - Presente
+						Ago 2020 - Jun 2022
 					</span>
 				</div>
-				<p>Desenvolvimento de sites corporativos.</p>
+				<p> • Desenvolvimento de novas funcionalidades.<br />
+					• Manutenção das existentes (ReacjJS).<br />
+					• Desenvolvimento das bibliotecas internas da empresa<br />
+					• Versionamento de código Git (GitLab).</p>
 				<ul class="content-skills">
 					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
 					<li><img class="icons-timeline" src="/img/css.png" /></li>
 					<li><img class="icons-timeline" src="/img/js.png" /></li>
+					<li><img class="icons-timeline" src="/img/wordpress.png" /></li>
 					<li><img class="icons-timeline" src="/img/react.png" /></li>
+					<li><img class="icons-timeline" src="/img/typescript.png" /></li>
+					<li><img class="icons-timeline" src="/img/git.png" /></li>
+					<li><img class="icons-timeline" src="/img/gitlab.png" /></li>
 				</ul>
 			</div>
 		</div>
 
-		<div class="cd-timeline-block">
+		<div class="cd-timeline-block reveal fade-bottom">
 			<div class="cd-timeline-img cd-picture">
 			</div>
 
 			<div class="cd-timeline-content">
-				<h2>Freelancer</h2>
+				<h2>Autbank</h2>
 				<div class="timeline-content-info">
 					<span class="timeline-content-info-title">
-						<i class="fa-solid fa-briefcase"></i> Dev Front-End
+						<i class="fa-solid fa-briefcase"></i> Analista Jr
 					</span>
 					<span class="timeline-content-info-date">
 						<i class="fa fa-calendar-o"></i>
-						Julho 2022 - Presente
+						Out 2017 - Dez 2019
 					</span>
 				</div>
-				<p>Desenvolvimento de sites corporativos.</p>
+				<p> • Criação e execução de testes de performance em aplicações web voltadas para o mercado
+					financeiro.<br />
+					• Elaboração de casos de testes.<br />
+					• Geração de massas de testes e elaboração de testes funcionais, automatizados e de performance,
+					utilizando as ferramentas SoapUi, jMeter e Selenium.<br />
 				<ul class="content-skills">
-					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
-					<li><img class="icons-timeline" src="/img/css.png" /></li>
-					<li><img class="icons-timeline" src="/img/js.png" /></li>
-					<li><img class="icons-timeline" src="/img/react.png" /></li>
+					<li><img class="icons-timeline" src="/img/test.png" /></li>
+					<li><img class="icons-timeline" src="/img/sql-server.png" /></i></li>
+					<li><img class="icons-timeline" src="/img/java.png" /></li>
+					<li><img class="icons-timeline" src="/img/git.png" /></li>
+					<li><img class="icons-timeline" src="/img/gitlab.png" /></li>
 				</ul>
 			</div>
 		</div>
@@ -150,29 +167,7 @@
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 			</div>
-
-			<div class="cd-timeline-content">
-				<h2>Freelancer</h2>
-				<div class="timeline-content-info">
-					<span class="timeline-content-info-title">
-						<i class="fa-solid fa-briefcase"></i> Dev Front-End
-					</span>
-					<span class="timeline-content-info-date">
-						<i class="fa fa-calendar-o"></i>
-						Julho 2022 - Presente
-					</span>
-				</div>
-				<p>Desenvolvimento de sites corporativos.</p>
-				<ul class="content-skills">
-					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
-					<li><img class="icons-timeline" src="/img/css.png" /></li>
-					<li><img class="icons-timeline" src="/img/js.png" /></li>
-					<li><img class="icons-timeline" src="/img/react.png" /></li>
-				</ul>
-			</div>
 		</div>
-
-
 	</section> <!-- cd-timeline -->
 	<section class="projetos" id="projetos">
 		<h2>Projetos</h2>
