Add section skills

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</h1>
 			</div>
 			<div>
-				<h2 class="title-h2">Ariane Gomes de Sousa</h2>
+				<h2 class="header-h2">Ariane Gomes de Sousa</h2>
 			</div>
 			<div>
 				<p class="title-p">Dev Front-End</p>
@@ -46,13 +46,13 @@
 		</div>
 	</header>
 	<section class="sobre " id="sobre">
-		<div class="sobre grid reveal fade-bottom">
+		<div class="sobre grid">
 			<div>
 				<figure class="avatar-dev">
 					<img src="./img/perfil.jpg" alt="Ilustração mulher usando computador">
 				</figure>
 			</div>
-			<div class="sobre-text reveal fade-bottom">
+			<div class="sobre-text">
 				<h2>Sobre mim</h2>
 				<hr />
 				<p>
@@ -73,9 +73,21 @@
 
 		</div>
 	</section>
+	<section>
+		<div class="container-colors">
+			<div class="container-right reveal fade-left">
+				<h2>Sou desenvolvedora Front-End</h2>
+				<p>Desenvolvedora Front-End com foco em JavaScript</p>
+			</div>
+			<div class="container-left reveal fade-right">
+				<h2>Entusiasta de UX Design</h2>
+				<p>Gosto de trabalhar com prototipação e de pensar na melhor experiencia do usuário</p>
+			</div>
+		</div>
+	</section>
 	<section id="experiencia" class="cd-container">
 		<div class="reveal fade-bottom">
-			<h2 class="cd-timeline-h2">Experiência</h2>
+			<h2 class="title-h2">Experiência</h2>
 			<hr />
 		</div>
 		<div class="cd-timeline-block reveal fade-bottom">
@@ -137,7 +149,6 @@
 		<div class="cd-timeline-block reveal fade-bottom">
 			<div class="cd-timeline-img cd-picture">
 			</div>
-
 			<div class="cd-timeline-content">
 				<h2>Autbank</h2>
 				<div class="timeline-content-info">
@@ -163,14 +174,44 @@
 				</ul>
 			</div>
 		</div>
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-location">
-			</div>
 		</div>
 	</section> <!-- cd-timeline -->
+	<section class="skills">
+		<div class="reveal fade-bottom">
+			<h2 class="title-h2">Habilidades</h2>
+			<hr />
+		</div>
+		<div>
+			HTML5
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 90%</div>
+		</div>
+		<div>
+			CSS3
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 70%</div>
+		</div>
+		<div>
+			JavaScript
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 60%</div>
+		</div>
+		<div>
+			ReacjJS
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 60%</div>
+		</div>
+		<div>
+			WordPress
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 20%</div>
+		</div>
+		<div>
+			GIT
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 70%</div>
+		</div>
+		<div>
+			GitLab
+			<div class="pie animate no-round" style="--p:80;--c:orange;"> 50%</div>
+		</div>
+	</section>
 	<section class="projetos" id="projetos">
-		<h2>Projetos</h2>
+		<h2 class="title-h2">Projetos</h2>
 		<hr />
 		<div class="grid">
 			<figure>
@@ -193,7 +234,7 @@
 		</div>
 	</section>
 	<section class="contato" id="contato">
-		<h2>Contato</h2>
+		<h2 class="title-h2">Contato</h2>
 		<hr />
 		<div class="grid icons">
 			<a target="blank" href="https://github.com/ariane011">
