Ajuste mobile na seção de skills

--- a/index.html
+++ b/index.html
@@ -177,37 +177,44 @@
 		</div>
 	</section> <!-- cd-timeline -->
 	<section class="skills">
-		<div class="reveal fade-bottom">
-			<h2 class="title-h2">Habilidades</h2>
-			<hr />
-		</div>
-		<div>
-			HTML5
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 90%</div>
-		</div>
-		<div>
-			CSS3
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 70%</div>
-		</div>
-		<div>
-			JavaScript
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 60%</div>
-		</div>
-		<div>
-			ReacjJS
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 60%</div>
-		</div>
-		<div>
-			WordPress
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 20%</div>
-		</div>
-		<div>
-			GIT
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 70%</div>
-		</div>
-		<div>
-			GitLab
-			<div class="pie animate no-round" style="--p:80;--c:orange;"> 50%</div>
+
+		<h2 class="title-h2">Habilidades</h2>
+		<hr />
+
+		<div class="container-chart">
+
+			<div class="content-chart">
+				HTML5
+				<div class="pie animate no-round" style="--p:80;--c:rgb(245, 190, 80);"> 90%</div>
+			</div>
+			<div class="content-chart">
+				CSS3
+				<div class="pie animate no-round" style="--p:80;--c:rgb(87, 180, 234);"> 70%</div>
+			</div>
+			<div class="content-chart">
+				JavaScript
+				<div class="pie animate no-round" style="--p:80;--c:rgb(234, 208, 93);"> 60%</div>
+			</div>
+			<div class="content-chart">
+				ReacjJS
+				<div class="pie animate no-round" style="--p:80;--c:rgb(110, 171, 224);"> 60%</div>
+			</div>
+			<div class="content-chart">
+				NodeJS
+				<div class="pie animate no-round" style="--p:80;--c:rgb(127, 199, 120);"> 20%</div>
+			</div>
+			<div class="content-chart">
+				WordPress
+				<div class="pie animate no-round" style="--p:80;--c:rgb(112, 148, 226);"> 20%</div>
+			</div>
+			<div class="content-chart">
+				GIT
+				<div class="pie animate no-round" style="--p:80;--c:rgb(158, 129, 218);"> 70%</div>
+			</div>
+			<div class="content-chart">
+				GitLab
+				<div class="pie animate no-round" style="--p:80;--c:orange;"> 50%</div>
+			</div>
 		</div>
 	</section>
 	<section class="projetos" id="projetos">
