Add link habilidades no header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<li><a class="menu-link active" href="#sobre">Sobre</a></li>
 					<li><a class="menu-link" href="#experiencia">Experiência</a></li>
 					<li><a class="menu-link" href="#projetos">Projetos</a></li>
+					<li><a class="menu-link" href="#habilidades">Habilidades</a></li>
 					<li><a class="menu-link" href="#contato">Contato</a></li>
 				</ul>
 			</div>
@@ -176,13 +177,10 @@
 		</div>
 		</div>
 	</section> <!-- cd-timeline -->
-	<section class="skills">
-
+	<section id="habilidades" class="skills">
 		<h2 class="title-h2">Habilidades</h2>
 		<hr />
-
 		<div class="container-chart">
-
 			<div class="content-chart">
 				HTML5
 				<div class="pie animate no-round" style="--p:80;--c:rgb(245, 190, 80);"> 90%</div>
