Efeito scroll animate na secao de habilidades

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 	<section id="habilidades" class="skills">
 		<h2 class="title-h2">Habilidades</h2>
 		<hr />
-		<div class="container-chart">
+		<div class="container-chart reveal fade-bottom-pie">
 			<div class="content-chart">
 				HTML5
 				<div class="pie animate no-round" style="--p:80;--c:rgb(245, 190, 80);"> 90%</div>
@@ -211,7 +211,7 @@
 			</div>
 			<div class="content-chart">
 				GitLab
-				<div class="pie animate no-round" style="--p:80;--c:orange;"> 50%</div>
+				<div class="pie animate no-round" style="--p:80;--c:orange;"> 65%</div>
 			</div>
 		</div>
 	</section>
