Add button scroll top e scroll about

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 			<div>
 				<p class="title-p">Dev Front-End</p>
 			</div>
+			<a href="#sobre" class="btn-pisca">
+				<i class="fa-solid fa-3x fa-circle-chevron-down"></i>
+			</a>
 		</div>
+
 	</header>
 	<section class="sobre " id="sobre">
 		<div class="sobre grid">
@@ -71,7 +75,6 @@
 					Uma das séries que mais gosto é Friends.
 				</p>
 			</div>
-
 		</div>
 	</section>
 	<section>
@@ -176,10 +179,12 @@
 			</div>
 		</div>
 		</div>
-	</section> <!-- cd-timeline -->
+	</section>
 	<section id="habilidades" class="skills">
-		<h2 class="title-h2">Habilidades</h2>
-		<hr />
+		<div class="reveal fade-bottom">
+			<h2 class="title-h2">Habilidades</h2>
+			<hr />
+		</div>
 		<div class="container-chart reveal fade-bottom-pie">
 			<div class="content-chart">
 				HTML5
@@ -238,6 +243,7 @@
 
 		</div>
 	</section>
+
 	<section class="contato" id="contato">
 		<h2 class="title-h2">Contato</h2>
 		<hr />
@@ -260,6 +266,11 @@
 		</div>
 
 	</section>
+	<div class="btn-scroll-top" id="btnscrollToTop">
+		<span>
+			<i class="fa fa-3x fa-arrow-circle-up"></i>
+		</span>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
