Ajuste no tamanho do chart

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 	</section>
 	<div class="btn-scroll-top" id="btnscrollToTop">
 		<span>
-			<i class="fa fa-3x fa-arrow-circle-up"></i>
+			<i class="fa-solid fa-3x fa-circle-chevron-up"></i>
 		</span>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
