Ajuste no caminho absoluto

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 				</div>
 				<p>Desenvolvimento de sites corporativos - Landing Pages</p>
 				<ul class="content-skills">
-					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
-					<li><img class="icons-timeline" src="/img/css.png" /></li>
-					<li><img class="icons-timeline" src="/img/js.png" /></li>
-					<li><img class="icons-timeline" src="/img/react.png" /></li>
-					<li><img class="icons-timeline" src="/img/git.png" /></li>
+					<li><img class="icons-timeline" src="./img/html.png" /></i></li>
+					<li><img class="icons-timeline" src="./img/css.png" /></li>
+					<li><img class="icons-timeline" src="./img/js.png" /></li>
+					<li><img class="icons-timeline" src="./img/react.png" /></li>
+					<li><img class="icons-timeline" src="./img/git.png" /></li>
 				</ul>
 			</div>
 		</div>
@@ -138,14 +138,14 @@
 					• Desenvolvimento das bibliotecas internas da empresa<br />
 					• Versionamento de código Git (GitLab).</p>
 				<ul class="content-skills">
-					<li><img class="icons-timeline" src="/img/html.png" /></i></li>
-					<li><img class="icons-timeline" src="/img/css.png" /></li>
-					<li><img class="icons-timeline" src="/img/js.png" /></li>
-					<li><img class="icons-timeline" src="/img/wordpress.png" /></li>
-					<li><img class="icons-timeline" src="/img/react.png" /></li>
-					<li><img class="icons-timeline" src="/img/typescript.png" /></li>
-					<li><img class="icons-timeline" src="/img/git.png" /></li>
-					<li><img class="icons-timeline" src="/img/gitlab.png" /></li>
+					<li><img class="icons-timeline" src="./img/html.png" /></i></li>
+					<li><img class="icons-timeline" src="./img/css.png" /></li>
+					<li><img class="icons-timeline" src="./img/js.png" /></li>
+					<li><img class="icons-timeline" src="./img/wordpress.png" /></li>
+					<li><img class="icons-timeline" src="./img/react.png" /></li>
+					<li><img class="icons-timeline" src="./img/typescript.png" /></li>
+					<li><img class="icons-timeline" src="./img/git.png" /></li>
+					<li><img class="icons-timeline" src="./img/gitlab.png" /></li>
 				</ul>
 			</div>
 		</div>
@@ -170,11 +170,11 @@
 					• Geração de massas de testes e elaboração de testes funcionais, automatizados e de performance,
 					utilizando as ferramentas SoapUi, jMeter e Selenium.<br />
 				<ul class="content-skills">
-					<li><img class="icons-timeline" src="/img/test.png" /></li>
-					<li><img class="icons-timeline" src="/img/sql-server.png" /></i></li>
-					<li><img class="icons-timeline" src="/img/java.png" /></li>
-					<li><img class="icons-timeline" src="/img/git.png" /></li>
-					<li><img class="icons-timeline" src="/img/gitlab.png" /></li>
+					<li><img class="icons-timeline" src="./img/test.png" /></li>
+					<li><img class="icons-timeline" src="./img/sql-server.png" /></i></li>
+					<li><img class="icons-timeline" src="./img/java.png" /></li>
+					<li><img class="icons-timeline" src="./img/git.png" /></li>
+					<li><img class="icons-timeline" src="./img/gitlab.png" /></li>
 				</ul>
 			</div>
 		</div>
